Upgrade to React 16

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boiler-plate",
+  "name": "electron-boiler-plate",
   "version": "0.9.0",
   "description": "Basic electron-react-redux boiler plate",
   "main": "main.js",
@@ -9,7 +9,7 @@
     "stylus-watch": "stylus --watch ./src/*.styl --out ./css/styles.css",
     "dev": "concurrently \"DEV=true npm start\" \"npm run stylus-watch\""
   },
-  "repository": "",
+  "repository": "https://github.com/cpwilkerson/electron-boiler-plate",
   "keywords": [
     "electron",
     "react",
@@ -52,17 +52,16 @@
     "chai-as-promised": "^7.1.1",
     "concurrently": "^3.5.0",
     "electron": "~1.6.2",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "ignore-styles": "^5.0.1",
     "istanbul": "^0.4.5",
     "jsdom": "^11.2.0",
     "mocha": "^3.5.3",
     "nyc": "^11.2.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
-    "sinon": "^3.3.0",
-    "sinon-as-promised": "^4.0.3",
+    "react": "^16.0.0",
+    "react-test-renderer": "^16.0.0",
+    "sinon": "^4.0.1",
     "sinon-chai": "^2.13.0",
     "stylus": "^0.54.5",
     "supertest": "^3.0.0",
@@ -75,8 +74,8 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
-    "react-dom": "^15.6.1",
-    "react-prop-types": "^0.4.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
